# cero

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  conanfile.txt  vcpkg-configuration.json  vcpkg.json
cero/: CMakeLists.txt  pch.hh  pch.hpp
cero/compile/: build.cc  build.cpp  build.hh
cero/driver/: build.cpp  build.hpp
cero/report/: code_location.cc  code_location.cpp  code_location.hh  code_location.hpp  console_reporter.hh  console_reporter.hpp  console_reporter.posix.cc  console_reporter.posix.cpp  console_reporter.win.cc  console_reporter.win.cpp  message.cc  message.cpp  message.hh  message.hpp  message_args.cc  message_args.cpp  message_args.hh  message_args.hpp  (+4 more)
src/: CMakeLists.txt  Pch.hpp
src/cero/driver/: BuildCommand.cpp  BuildCommand.hpp  CompilerOptions.hpp  Run.cpp  Run.hpp
src/cero/report/: CodeLocation.cpp  CodeLocation.hpp  ConsoleReporter.cpp  ConsoleReporter.hpp  ConsoleReporter.posix.cpp  ConsoleReporter.win.cpp  Message.cpp  Message.hpp  MessageArgs.cpp  MessageArgs.hpp  Reporter.cpp  Reporter.hpp
src/cero/syntax/: Ast.cpp  Ast.hpp  AstCursor.cpp  AstCursor.hpp  AstNode.hpp  AstNodeKind.cpp  AstNodeKind.hpp  AstToString.cpp  AstToString.hpp  Encoding.hpp  Lexer.cpp  Lexer.hpp  Literal.hpp  Parser.cpp  Parser.hpp  Source.cpp  Source.hpp  SourceCursor.hpp  Token.cpp  Token.hpp  TokenCursor.hpp  TokenStream.cpp  TokenStream.hpp
src/cero/util/: Assert.cpp  Assert.hpp  FileMapping.hpp  FileMapping.posix.cpp  FileMapping.win.cpp  ImplStorage.hpp  ScopedAssign.hpp  SystemError.hpp  SystemError.win.cpp  WindowsUtil.hpp  WindowsUtil.win.cpp
tests/: CMakeLists.txt
tests/common/: ExhaustiveReporter.cpp  ExhaustiveReporter.hpp  Test.cpp  Test.hpp  TestRunner.cpp  doctest.cc  doctest.cpp  doctest.hh  doctest.hpp  doctest_listener.cpp  doctest_main.cpp  test.cc  test.cpp  test.hh  test.hpp  test_reporter.cc  test_reporter.cpp  test_reporter.hh  test_reporter.hpp
tests/compile/: build_errors.cc  build_errors.cpp  build_results.cc  build_results.cpp
tests/driver/: BuildCommandTests.cpp  build_errors.cpp  build_results.cpp
tests/syntax/: AstCompare.cpp  AstCompare.hpp  AstStringResults.cpp  LexerErrors.cpp  LexerResults.cpp  ParseResultsControlFlow.cpp  ParseResultsDefinitions.cpp  ParseResultsGenerics.cpp  ParseResultsOperators.cpp  ParserErrors.cpp  ParserResultsControlFlow.cpp  ParserResultsDefinitions.cpp  ParserResultsGenerics.cpp  ParserResultsOperators.cpp  TokenStringResults.cpp  ast_compare.cc  ast_compare.cpp  ast_compare.hh  ast_compare.hpp  common.cc  common.cpp  common.hh  common.hpp  embedded_null.ce  embedded_null.co  lexer_errors.cc  lexer_errors.cpp  lexer_identifiers.cc  lexer_identifiers.cpp  lexer_keywords.cc  lexer_keywords.cpp  lexer_literals.cc  lexer_literals.cpp  lexer_operators.cc  lexer_operators.cpp  lexer_results.cc  lexer_results.cpp  parser_errors.cc  parser_errors.cpp  parser_results_definitions.cc  (+3 more)
(+93 files in other folders)
